# BitWave

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.cn.md  README.md
aur/: PKGBUILD
cmake/: FindFFmpeg.cmake  FindMPV.cmake  FindTagLib.cmake  FindTaglib.cmake  OptionalSource.cmake  ParseArguments.cmake
desktop/: BitWave.desktop  audio-x-ncm.xml  (+1 more)
docs/: arch.md
lib/rxui/: CMakeLists.txt  README.md  rxui.h
lib/rxui/src/: Button.qml  CMakeLists.txt  ComboBox.qml  Frame.qml  InteractiveProgressBar.qml  ItemDelegate.qml  Label.qml  Loader.qml  Menu.qml  MenuItem.qml  Pane.qml  Popup.qml  ScrollBar.qml  ScrollIndicator.qml  ScrollView.qml  Slider.qml  StackView.qml  Style.qml  TextBox.qml  ToolTip.qml  assets.qrc
src/: CMakeLists.txt  app_defs.cpp  app_defs.h  entry.cpp  main.cc
src/app/: app.cc  app.h
src/codec/: codec.cc  codec.h  interface.h  mpv_codec.cc  mpv_codec.h  ncm_codec.cc  ncm_codec.h  qmc_codec.cc  qmc_codec.h
src/config/: config.cc  config.h  display_config.cc  display_config.h
src/dbus/: dbusscreensaver.cc  dbusscreensaver.cpp  dbusscreensaver.h  metatypes.h  mpris.cc  mpris.cpp  mpris.h  mpris2.cc  mpris2.cpp  mpris2.h  mpris_common.h  org.freedesktop.Notifications.xml  org.gnome.SettingsDaemon.MediaKeys.xml  org.mpris.MediaPlayer2.Player.xml  org.mpris.MediaPlayer2.xml  screensaver.cc  screensaver.cpp  screensaver.h  windowsscreensaver.cc  windowsscreensaver.cpp  windowsscreensaver.h
src/engines/: mpv_engine.cpp  mpv_engine.h  sqlite_engine.cpp  sqlite_engine.h
src/lyric_providers/: base_lyric_provider.cpp  base_lyric_provider.h  local_lyric_provider.cpp  local_lyric_provider.h  lyric_provider_factory.cpp  lyric_provider_factory.h  netease_lyric_provider.cpp  netease_lyric_provider.h
src/lyrics/: interface.h  local_lyrics.cc  local_lyrics.h  lyrics.cc  lyrics.h  ncm_lyrics.cc  ncm_lyrics.h
src/managers/: app_manager.cpp  app_manager.h  base_manager.cpp  base_manager.h  display_manager.cpp  display_manager.h  gui_manager.cpp  gui_manager.h  lyric_provider_manager.cpp  lyric_provider_manager.h  parser_manager.cpp  parser_manager.h  player_manager.cpp  player_manager.h  provider_manager.cpp  provider_manager.h  queue_manager.cpp  queue_manager.h  router_manager.cpp  router_manager.h  service_manager.cpp  service_manager.h  settings_manager.cpp  settings_manager.h
src/models/: local_music.cpp  local_music.h  local_netease_music.cpp  local_netease_music.h  local_video.cpp  local_video.h  media.cc  media.cpp  media.h  media_list.cc  media_list.h  online_bilibili_video.cpp  online_bilibili_video.h  online_netease_music.cpp  online_netease_music.h
src/models/ui/: lyrics_list_model.cpp  lyrics_list_model.h  media_queue_model.cpp  media_queue_model.h  playlist_model.cpp  playlist_model.h  service_list_model.cpp  service_list_model.h  sidebar_playlist_model.cpp  sidebar_playlist_model.h
src/parser/: ffmpeg_parser.cc  ffmpeg_parser.h  interface.h  ncm_parser.cc  ncm_parser.h  parser.cc  parser.h
src/parsers/: README.md  base_parser.cpp  base_parser.h  local_music_parser.cpp  local_music_parser.h  local_netease_music_parser.cpp  local_netease_music_parser.h  local_video_parser.cpp  local_video_parser.h  online_bilibili_video_parser.cpp  online_bilibili_video_parser.h  online_netease_music_parser.cpp  online_netease_music_parser.h  parser_factory.cpp  parser_factory.h
src/player/: engine.cc  engine.h  play_queue.cc  play_queue.h  player.cc  player.h  video_player.cc  video_player.h
src/playlist/: interface.h  playlist.cc  playlist.h
src/providers/: bilibili_provider.cpp  bilibili_provider.h  local_music_provider.cpp  local_music_provider.h  local_video_provider.cpp  local_video_provider.h  netease_provider.cpp  netease_provider.h  osu_provider.cpp  osu_provider.h  playlists_provider.h
src/resources/: gen_rc.py  main.qrc  rename_svg.py
src/resources/components/: ActiveTab.qml  Breadcrumb.qml  CheckBox.qml  CircleSliderArea.qml  CircleSliderButton.qml  ContentMenu.qml  ControlButton.qml  FluentWindow.qml  HorizontalStepSlider.qml  IconButton.qml  InputArea.qml  InputBox.qml  KeyTapEvent.qml  Loader.qml  LyricContent.qml  LyricsBox.qml  MediaTableItem.qml  MusicTableItem.qml  ProgressBar.qml  PushArea.qml  PushButton.qml  QueueMediaItem.qml  RadioButton.qml  SearchBox.qml  ShortcutEvent.qml  SliderBar.qml  Switch.qml  TextLabel.qml  TimeButton.qml  UXScrollBar.qml  VerticalStepSlider.qml  video_player.cpp  video_player.h
src/resources/translations/: README.md  en_US.qm  en_US.ts  zh_CN.qm  zh_CN.ts
src/resources/views/: ControlBar.qml  MainWindow.qml  PageStack.qml  PlayQueueBox.qml  PlayerPage.qml  PlayerToolBox.qml  PlaylistPage.qml  QueueBar.qml  SearchPage.qml  SettingsPage.qml  SideBar.qml  SystemTray.qml  TitleBar.qml  VideoIndicator.qml
src/services/: base_service.cpp  base_service.h  bilibili_video_service.cpp  bilibili_video_service.h  custom_service.cpp  custom_service.h  local_music_service.cpp  local_music_service.h  local_video_service.cpp  local_video_service.h  netease_music_service.cpp  netease_music_service.h  osu_music_service.cpp  osu_music_service.h
src/storage/: storage.cc  storage.h
src/translations/: README.md  app_en.ts  app_zh.ts  trans_lists.txt
src/ui/: Main.qml  colorize.cc  colorize.h  config.cc  config.h  main.qrc  router.cc  router.h  ui.cc  ui.h
src/ui/components/: ActiveTab.qml  ControlBar.qml  FramelessWindow.qml  KeyTapEvent.qml  Lyric.qml  MediaRow.qml  OptionWidget.qml  PauseButton.qml  QueueWidget.qml  SideBar.qml  SystemTray.qml  TimeButton.qml  TitleBar.qml  VolumeButton.qml
src/ui/i18n/: en_US.qm  en_US.ts  zh_CN.qm  zh_CN.ts
src/ui/views/: ExploreView.qml  LibraryView.qml  PlayerView.qml  PlaylistView.qml  SearchView.qml  SettingsView.qml
src/utilities/: color_helper.cpp  color_helper.h  memory_helper.cpp  memory_helper.h  mpv_helper.h  ncm_helper.cpp  ncm_helper.h  search_helper.cpp  search_helper.h  single_app_guard.cpp  single_app_guard.h  string_helper.cpp  string_helper.h  time_helper.cpp  time_helper.h
src/utils/: language_helper.h  mpv_helper.h  ncm_helper.h
(+28 files in other folders)
